# suda-agent

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/suda/agent/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Logging.cpp  Logging.hpp  main.cpp  main.hpp  native-lib.cpp
app/src/main/cpp/Genie_inc/: GenieCommon.h  GenieDialog.h
app/src/main/java/com/suda/agent/: MainActivity.kt
app/src/main/java/com/suda/agent/core/: AudioBufferStore.kt  CircularAudioBuffer.kt  IpConfig.kt  LLMResponse.kt  MainViewModel.kt  SqliteHelper.kt
app/src/main/java/com/suda/agent/engine/: LlmClient.java  OfflineRecognizer.kt  Tts.kt  Vad.kt
app/src/main/java/com/suda/agent/feature/: VadManager.kt
app/src/main/java/com/suda/agent/network/: WSClient.kt
app/src/main/java/com/suda/agent/service/: ConversationService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/suda/agent/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
